perfect-scrollbar z-index fix

--- a/src/app/global-less/plugins/perfect-scrollbar.less
+++ b/src/app/global-less/plugins/perfect-scrollbar.less
@@ -3,6 +3,7 @@
     > .ps-scrollbar-x-rail {
         margin: 4px 0;
         height: 4px;
+        z-index: 99;
 
         > .ps-scrollbar-x {
             height: 4px;
@@ -12,6 +13,7 @@
     > .ps-scrollbar-y-rail {
         margin: 4px 0;
         width: 4px;
+        z-index: 99;
 
         > .ps-scrollbar-y {
             width: 4px;
